Fix register user and profile by new requirement

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
     "editor.formatOnPaste": false,
     "[json]": {
         "editor.formatOnSave": false
-    }
+    },
+    "prettier.printWidth": 120
 }
