--- a/gateway/.prettierrc
+++ b/gateway/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "error": {
+    "endOfLine": "auto"
+  },
+  "semi": true
 }
