--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.0.3",
     "grpc": "^1.24.11",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mikro-orm": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -52,6 +53,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
