Fix create customer

--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -1,12 +1,14 @@
-DATABASE_TYPE=postgresql
-DATABASE_HOST=
-DATABASE_DBNAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_PORT=
-
-JWT_PRIVATE_KEY=
-
+# cloudinary
 CLD_CLOUD_NAME=
 CLD_API_KEY=
 CLD_API_SECRET=
+
+# microservice
+USERS_SVC_URL=
+MERCHANTS_SVC_URL=
+
+# jwt
+JWT_PRIVATE_KEY=
+JWT_REFRESH_TOKEN_SECRET=
+JWT_ISSUER=
+JWT_AUDIENCE=
