--- a/users-service/package.json
+++ b/users-service/package.json
@@ -8,8 +8,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "lint": "eslint --max-warnings=0 '{src,__tests__}/**/*.ts'",
-    "lint:fix": "eslint --fix '{src,__tests__}/**/*.ts'",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
