Fix env notification example

--- a/booking-service/.env.example
+++ b/booking-service/.env.example
@@ -1,5 +1,5 @@
 # Environment
-NODE_ENV=
+NODE_ENV=development
 
 # gRPC Server Options
 GRPC_HOST=
@@ -16,8 +16,9 @@ DB_SYNC=
 
 # Cache Options
 REDIS_HOST=
-REDIS_PORT=
+REDIS_USERNAME=
 REDIS_PASSWORD=
+REDIS_PORT=
 REDIS_DB=
 REDIS_PREFIX_KEY=
 
