--- a/notification-service/.env.example
+++ b/notification-service/.env.example
@@ -1,9 +1,15 @@
 # Environment
-NODE_ENV=
+NODE_ENV=development
 
 # gRPC Server Options
 GRPC_HOST=
 GRPC_PORT=
+
+# Other gRPC Server microservice
+USERS_SVC_URL=
+MERCHANTS_SVC_URL=
+MERCHANT_BRANCHES_SVC_URL=
+BOOKING_SVC_URL=
 
 # DB Options
 DB_HOST=
@@ -16,4 +22,16 @@ DB_SYNC=
 
 # Cache Options
 REDIS_HOST=
+REDIS_USERNAME=
+REDIS_PASSWORD=
 REDIS_PORT=
+REDIS_DB
+REDIS_PREFIX_KEY=
+
+BULL_PREFIX_KEY=
+
+# Email options
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMPT_PASSWORD=
