--- a/gateway/package.json
+++ b/gateway/package.json
@@ -24,6 +24,7 @@
     "@grpc/grpc-js": "^1.7.3",
     "@grpc/proto-loader": "^0.7.3",
     "@nestjs/apollo": "^10.1.3",
+    "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -36,12 +37,16 @@
     "argon2": "^0.30.3",
     "bcryptjs": "^2.4.3",
     "buffer-to-stream": "^1.0.0",
+    "bull": "^4.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cloudinary": "^1.35.0",
     "graphql": "^16.6.0",
+    "graphql-redis-subscriptions": "^2.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload-minimal": "^1.5.4",
     "grpc": "^1.24.11",
+    "ioredis": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "passport": "^0.6.0",
@@ -57,7 +62,9 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/buffer-to-stream": "^1.0.0",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "28.1.8",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
