--- a/merchant-service/package.json
+++ b/merchant-service/package.json
@@ -19,8 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:create": "yarn build && mikro-orm migration:create",
-    "migration:up": "yarn build && mikro-orm migration:up"
+    "db:generate": "npx sequelize-cli migration:generate",
+    "db:migrate": "npx sequelize-cli db:migrate"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.7.3",
@@ -37,6 +37,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "0.1.0",
     "aigle": "^1.14.1",
+    "dotenv": "^16.0.3",
     "grpc": "^1.24.11",
     "lodash": "^4.17.21",
     "mikro-orm": "^5.5.0",
@@ -45,7 +46,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "5.21.11",
     "sequelize-cursor-pagination": "1.7.0",
-    "sequelize-typescript": "1.1.0"
+    "sequelize-typescript": "1.1.0",
+    "slug": "^8.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -55,6 +57,7 @@
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/sequelize": "4.28.9",
+    "@types/slug": "^5.0.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
