--- a/merchant-service/package.json
+++ b/merchant-service/package.json
@@ -36,7 +36,9 @@
     "@nestjs/microservices": "^9.1.5",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "0.1.0",
+    "@ntheanh201/nestjs-sequelize-pagination": "^1.1.2",
     "aigle": "^1.14.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "grpc": "^1.24.11",
     "lodash": "^4.17.21",
