Add example env

--- a/booking-service/.env.example
+++ b/booking-service/.env.example
@@ -1,9 +1,16 @@
 # Environment
-NODE_ENV=development
+NODE_ENV=
 
 # gRPC Server Options
 GRPC_HOST=
 GRPC_PORT=
+
+# microservice
+USERS_SVC_URL=
+MERCHANTS_SVC_URL=
+MERCHANT_BRANCHES_SVC_URL=
+BOOKING_SVC_URL=
+NOTIFICATION_SVC_URL=
 
 # DB Options
 DB_HOST=
