--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -6,9 +6,22 @@ CLD_API_SECRET=
 # microservice
 USERS_SVC_URL=
 MERCHANTS_SVC_URL=
+MERCHANT_BRANCHES_SVC_URL=
+BOOKING_SVC_URL=
+NOTIFICATION_SVC_URL=
 
 # jwt
 JWT_PRIVATE_KEY=
 JWT_REFRESH_TOKEN_SECRET=
 JWT_ISSUER=
 JWT_AUDIENCE=
+
+# Cache Options
+REDIS_HOST=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_PORT=
+REDIS_DB=
+REDIS_PREFIX_KEY=
+
+BULL_PREFIX_KEY=
