--- a/notification-service/.env.example
+++ b/notification-service/.env.example
@@ -1,5 +1,5 @@
 # Environment
-NODE_ENV=development
+NODE_ENV=
 
 # gRPC Server Options
 GRPC_HOST=
@@ -10,6 +10,7 @@ USERS_SVC_URL=
 MERCHANTS_SVC_URL=
 MERCHANT_BRANCHES_SVC_URL=
 BOOKING_SVC_URL=
+NOTIFICATION_SVC_URL=
 
 # DB Options
 DB_HOST=
@@ -25,7 +26,7 @@ REDIS_HOST=
 REDIS_USERNAME=
 REDIS_PASSWORD=
 REDIS_PORT=
-REDIS_DB
+REDIS_DB=
 REDIS_PREFIX_KEY=
 
 BULL_PREFIX_KEY=
