--- a/users-service/.env.example
+++ b/users-service/.env.example
@@ -5,6 +5,15 @@ NODE_ENV=
 GRPC_HOST=
 GRPC_PORT=
 
+
+# microservice
+USERS_SVC_URL=
+MERCHANTS_SVC_URL=
+MERCHANT_BRANCHES_SVC_URL=
+BOOKING_SVC_URL=
+NOTIFICATION_SVC_URL=
+
+
 # DB Options
 DB_HOST=
 DB_PORT=
@@ -15,5 +24,5 @@ DB_SCHEMA=
 DB_SYNC=
 
 # Cache Options
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST
+REDIS_PORT
