--- a/gateway/package.json
+++ b/gateway/package.json
@@ -31,8 +31,11 @@
     "@nestjs/graphql": "^10.1.3",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/microservices": "^9.1.5",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "9.0.0",
+    "@nestjs/platform-socket.io": "9.0.0",
+    "@nestjs/websockets": "9.0.0",
     "apollo-server-express": "^3.10.3",
     "argon2": "^0.30.3",
     "bcryptjs": "^2.4.3",
@@ -49,6 +52,7 @@
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -56,6 +60,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
